# webclient

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: ai_connection.rs  file_store.rs  git.rs  mod.rs  request_runner.rs  timeline.rs  workspace.rs
src/components/: ActionMenu.tsx  CollectionPanel.tsx  DiffViewer.tsx  KeyValueEditor.tsx  RequestEditor.tsx  ResponseViewer.tsx  Sidebar.tsx  TimelineViewer.tsx
src/components/ai/: AiConnectionWizard.module.css  AiConnectionWizard.tsx
src/components/common/: CompactSelect.module.css  CompactSelect.tsx  EmptyState.module.css  EmptyState.tsx  IconButton.module.css  IconButton.tsx  JsonEditor.tsx  MethodBadge.module.css  MethodBadge.tsx  SplitPane.module.css  SplitPane.tsx
src/components/copilot/: ActionToolbar.module.css  ActionToolbar.tsx  (+20 more)
src/services/: copilotBuildPlan.ts  copilotContext.ts  copilotContextIndex.ts  copilotContextResolver.ts  copilotController.ts  copilotService.ts  copilotSessionStore.ts  flowLayoutService.ts  flowRunner.ts  jsonPathService.ts  jsonTreeService.ts  mapPlaceholderService.ts  mappingEngine.ts  mappingSuggestionService.ts  monacoTheme.ts  recentWorkspaceService.ts  requestBody.ts  requestDragStore.ts  responseExampleService.ts  scriptRunner.ts  sessionStore.ts  tauriApi.ts  themeStore.ts  variableResolver.ts  workspaceService.ts
src/types/: bik.ts  copilot.ts
(+146 files in other folders)
