[package]
name = "bikapi"
version = "0.1.0"
description = "Local-first desktop API client using .bik files"
authors = ["BikAPI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
